--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<link rel="favicon" href="/assets/favicon.png">
 		<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700">
-		<link rel="stylesheet" href="/assets/bootstrap.min.css">
+		<!--<link rel="stylesheet" href="/assets/bootstrap.min.css">-->
+		<%= stylesheet_link_tag "bootstrap.min" %>
 		<link rel="stylesheet" href="/assets/font-awesome.min.css">
 		<link rel="stylesheet" href="/assets/bootstrap-theme.css" media="screen">
-		<link rel="stylesheet" href="/assets/style.css">
+		<!--<link rel="stylesheet" href="/assets/style.css">-->
+
+		<%= stylesheet_link_tag "style" %>
 	  <link rel='stylesheet' id='camera-css'  href='assets/camera.css' type='text/css' media='all'>
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
