update image tags

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,8 +4,8 @@
       <ul class="list-group courses">
         <li class="list-group-item">
           <a href="courses/web-design-and-development"> Level 3 Certificate in Web Design and Development (RQF) </a>
-					<img src="/assets/fulltime.png" alt="full time">
-					<img src="/assets/parttime.png" alt="part time">
+					<%= image_tag "fulltime.png" :alt => "full time" %>
+					<%= image_tag "parttime.png" :alt => "part time" %>
         </li>
       </ul>
     </div>
@@ -16,11 +16,11 @@
       <ul class="list-group courses">
 				<li class="list-group-item">
           <a href="courses/building-a-website"> Building a website </a>
-					<img src="/assets/parttime.png" alt="part time">
+					<%= image_tag "parttime.png" :alt => "part time" %>
         </li>
         <li class="list-group-item">
           <a href="courses/getting-started-with-linux"> Getting Started with Linux </a>
-					<img src="/assets/parttime.png" alt="part time">
+					<%= image_tag "parttime.png" :alt => "part time" %>
         </li>
       </ul>
     </div>
