--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700">
 		<!--<link rel="stylesheet" href="/assets/bootstrap.min.css">-->
 		<%= stylesheet_link_tag "bootstrap.min" %>
-		<link rel="stylesheet" href="/assets/font-awesome.min.css">
-		<link rel="stylesheet" href="/assets/bootstrap-theme.css" media="screen">
+		<%= stylesheet_link_tag "font-awesome.min.css" %>
+		<%= stylesheet_link_tag "bootstrap-theme.css" media="screen" %>
 		<!--<link rel="stylesheet" href="/assets/style.css">-->
 
 		<%= stylesheet_link_tag "style" %>
-	  <link rel='stylesheet' id='camera-css'  href='assets/camera.css' type='text/css' media='all'>
+	  <%= stylesheet_link_tag 'camera.css' :media => 'all' :id => 'camera-css' %>
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="/assets/html5shiv.js"></script>
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 					<a class="navbar-brand" href="/" id='logo'>
-						<!--<img src="/assets/logo.png" alt="Alderhill Digital Logo">-->
+						<!--<%= image_tag "logo.png" :alt => "Alderhill Digital Logo" %>-->
 							<span id='alderhill'>Alderhill</span>
 							|
 							<span id='digital'>Digital</span>
