--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,15 +141,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		</footer>
 
     		<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-    		<script src="/assets/modernizr-latest.js"></script>
-    		<script type='text/javascript' src='assets/jquery.min.js'></script>
-    	  <script type='text/javascript' src='assets/fancybox/jquery.fancybox.pack.js'></script>
-
-    	  <script type='text/javascript' src='assets/jquery.mobile.customized.min.js'></script>
-    	  <script type='text/javascript' src='assets/jquery.easing.1.3.js'></script>
-    	  <script type='text/javascript' src='assets/camera.min.js'></script>
-    	  <script src="/assets/bootstrap.min.js"></script>
-    		<script src="/assets/custom.js"></script>
+				<%= javascript_tag 'modernizr-latest' %>
+    		<%= javascript_tag 'jquery.min' %>
+    	  <%= javascript_tag 'fancybox/jquery.fancybox.pack' %>
+				<%= javascript_tag 'jquery.mobile.customized.min' %>
+    	  <%= javascript_tag 'jquery.easing.1.3' %>
+    	  <%= javascript_tag 'camera.min' %>
+    	  <%= javascript_tag 'bootstrap.min' %>
+    		<%= javascript_tag 'custom' %>
     	  <script>
     			jQuery(function(){
 
