image_tag in brackets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 		<div class="col-md-3">
 			<div class="grey-box-icon">
 				<div class="icon-box-top grey-box-icon-pos">
-					<%= image_tag "1.png", :alt => 'hat icon' %>
+					<%= image_tag("1.png", :alt => 'hat icon') %>
 				</div>
 				<h4>Courses</h4>
 				<p>Our qualifications and courses are designed to address knowledge and skills required for the digital industry.</p>
@@ -30,7 +30,7 @@
 		<div class="col-md-3">
 			<div class="grey-box-icon">
 				<div class="icon-box-top grey-box-icon-pos">
-					<%= image_tag "2.png", :alt => 'whiteboard icon' %>
+					<%= image_tag("2.png", :alt => 'whiteboard icon') %>
 				</div>
 				<h4>Our Centre</h4>
 				<p>A local training environment that is friendly and comfortable and uses the same tools and technology used in the real world.</p>
@@ -40,16 +40,16 @@
 		<div class="col-md-3">
 			<div class="grey-box-icon">
 				<div class="icon-box-top grey-box-icon-pos">
-					<%= image_tag "3.png", :alt => "book icon" %>
+					<%= image_tag("3.png", :alt => "book icon") %>
 				</div>
 				<h4>Latest Updates</h4>
 				<p>Keep up-to-date with what is going on in our centre and what our staff and learners are up to.</p>
 					<p class="social-icons">
 					<a href="http://www.twitter.com/alderhilldigi">
-						<%= image_tag "twitter-grey.png", :alt => 'twitter icon'%>
+						<%= image_tag("twitter-grey.png", :alt => 'twitter icon') %>
 					</a>
 					<a href="http://www.facebook.com/alderhilldigi">
-						<%= image_tag "facebook-grey.png", :alt => 'facebook icon'%>
+						<%= image_tag("facebook-grey.png", :alt => 'facebook icon') %>
 					</a>
 				</p>
 			</div><!--grey box -->
@@ -57,7 +57,7 @@
 		<div class="col-md-3">
 			<div class="grey-box-icon">
 				<div class="icon-box-top grey-box-icon-pos">
-					<%= image_tag "4.png", :alt => "pen icon" %>
+					<%= image_tag("4.png", :alt => "pen icon") %>
 				</div><!--icon box top -->
 				<h4>Work Experience</h4>
 				<p>Work experience is an important part of preparing for a career in the digital sector. We aim to give our learners the best start we can.</p>
@@ -73,7 +73,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag "news6.png", :alt => "html5 css js icons" %></figure>
+						<figure><%= image_tag("news6.png", :alt => "html5 css js icons") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
@@ -88,7 +88,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag "news5.jpg", :alt => "linux icon" %></figure>
+						<figure><%= image_tag("news5.jpg", :alt => "linux icon") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
@@ -103,7 +103,7 @@
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="newsBox">
 					<div class="thumbnail">
-						<figure><%= image_tag "news8.jpg", :alt => "flow diagram" %></figure>
+						<figure><%= image_tag("news8.jpg", :alt => "flow diagram") %></figure>
 						<div class="caption maxheight2">
 							<div class="box_inner">
 								<div class="box">
