--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 					<a class="navbar-brand" href="/" id='logo'>
-						<!--<%= image_tag "logo.png", :alt => "Alderhill Digital Logo" %>-->
+						<!--<%= image_tag("logo.png", :alt => "Alderhill Digital Logo") %>-->
 							<span id='alderhill'>Alderhill</span>
 							|
 							<span id='digital'>Digital</span>
