--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,14 +141,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		</footer>
 
     		<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-				<%= javascript_tag 'modernizr-latest' %>
-    		<%= javascript_tag 'jquery.min' %>
-    	  <%= javascript_tag 'fancybox/jquery.fancybox.pack' %>
-				<%= javascript_tag 'jquery.mobile.customized.min' %>
-    	  <%= javascript_tag 'jquery.easing.1.3' %>
-    	  <%= javascript_tag 'camera.min' %>
-    	  <%= javascript_tag 'bootstrap.min' %>
-    		<%= javascript_tag 'custom' %>
+				<%= javascript_include_tag 'modernizr-latest' %>
+    		<%= javascript_include_tag 'jquery.min' %>
+    	  <%= javascript_include_tag 'fancybox/jquery.fancybox.pack' %>
+				<%= javascript_include_tag 'jquery.mobile.customized.min' %>
+    	  <%= javascript_include_tag 'jquery.easing.1.3' %>
+    	  <%= javascript_include_tag 'camera.min' %>
+    	  <%= javascript_include_tag 'bootstrap.min' %>
+    		<%= javascript_include_tag 'custom' %>
     	  <script>
     			jQuery(function(){
 
