asset path for css

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,11 +6,11 @@
 		</div>
 		<div class="fluid_container">
 			<div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-				<div data-thumb="<%= asset_path('slides/img4.jpg') %>" data-src="/assets/slides/img4.jpg">
+				<div data-thumb="<%= asset_path('slides/img4.jpg') %>" data-src="<%= asset_path('slides/img4.jpg') %>">
 					<h2>We develop.</h2>
 				</div>
-				<div data-thumb="<%= asset_path('slides/img5.jpg') %>" data-src="/assets/slides/img5.jpg"></div>
-				<div data-thumb="<%= asset_path('slides/img6.jpg') %>" data-src="/assets/slides/img6.jpg"></div>
+				<div data-thumb="<%= asset_path('slides/img5.jpg') %>" data-src="<%= asset_path('slides/img5.jpg') %>"></div>
+				<div data-thumb="<%= asset_path('slides/img6.jpg') %>" data-src="<%= asset_path('slides/img6.jpg') %>"></div>
 			</div>
 		</div>
 	</div>
