--- a/app/assets/stylesheets/camera.css.scss
+++ b/app/assets/stylesheets/camera.css.scss
@@ -103,8 +103,8 @@
 	text-decoration: none;
 }
 .camera_loader {
-    background: #fff url(/assets/camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(/assets/camera-loader.gif) no-repeat center;
+  background: #fff url(asset_path('camera-loader.gif')) no-repeat center;
+	background: rgba(255, 255, 255, 0.9) url(asset_path('camera-loader.gif')) no-repeat center;
 	border: 1px solid #ffffff;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
