--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,7 +141,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     		</footer>
 
     		<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-				<%= javascript_include_tag 'modernizr-latest' %>
+				<%= javascript_include_tag :modernizr %>
     		<%= javascript_include_tag 'jquery.min' %>
     	  <%= javascript_include_tag 'fancybox/jquery.fancybox.pack' %>
 				<%= javascript_include_tag 'jquery.mobile.customized.min' %>
