--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,10 +46,10 @@
 				<p>Keep up-to-date with what is going on in our centre and what our staff and learners are up to.</p>
 					<p class="social-icons">
 					<a href="http://www.twitter.com/alderhilldigi">
-						<%= image_tag("twitter-grey.png", :alt => 'twitter icon') %>
+						<%= fa_icon "twitter" %>
 					</a>
 					<a href="http://www.facebook.com/alderhilldigi">
-						<%= image_tag("facebook-grey.png", :alt => 'facebook icon') %>
+						<%= fa_icon "facebook" %>
 					</a>
 				</p>
 			</div><!--grey box -->
