--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1042,7 +1042,7 @@
  	max-height: 30px;
  	margin: 0 20px;
  }
- .social-icons a:hover{
+ .social a:hover{
  	text-decoration:none;
  }
  .courses img{
