--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,13 +44,14 @@
 				</div>
 				<h4>Latest Updates</h4>
 				<p>Keep up-to-date with what is going on in our centre and what our staff and learners are up to.</p>
-					<p class="social-icons">
-					<a href="http://www.twitter.com/alderhilldigi">
-						<%= fa_icon "twitter" %>
-					</a>
-					<a href="http://www.facebook.com/alderhilldigi">
-						<%= fa_icon "facebook" %>
-					</a>
+					<div class="social">
+						<a href="http://www.twitter.com/alderhilldigi">
+							<%= fa_icon "twitter" %>
+						</a>
+						<a href="http://www.facebook.com/alderhilldigi">
+							<%= fa_icon "facebook" %>
+						</a>
+					</div>
 				</p>
 			</div><!--grey box -->
 		</div><!--/span3-->
