--- a/app/views/user_mailer/contact_email.html.erb
+++ b/app/views/user_mailer/contact_email.html.erb
@@ -1,4 +1,9 @@
 <p>
   New contact details from website
-  <%= @name %>
+  <br />
+  Name: <%= @name %>
+  <br />
+  Email: <%= @email %>
+  <br />
+  Message: <%= @message %>
 </p>
