comment unused links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,7 +62,7 @@
 				</div><!--icon box top -->
 				<h4>Work Experience</h4>
 				<p>Work experience is an important part of preparing for a career in the digital sector. We aim to give our learners the best start we can.</p>
-					<p><a href="#"><em>Read More</em></a></p>
+				<p></p>
 			</div><!--grey box -->
 		</div><!--/span3-->
 	</div>
@@ -129,11 +129,11 @@
       <div class="col-md-4"><div class="title-box clearfix "><h2 class="title-box_primary">Up Coming Courses</h2></div>
         <div class="list styled custom-list">
         <ul>
-        <li><a title="Database Technologies" href="#">Database Technologies</a></li>
-        <li><a title="Cyber Security" href="#">Cyber Security</a></li>
-        <li><a title="iOS Development" href="#">iOS Development</a></li>
-        <li><a title="PHP Application Development" href="#">PHP Application Development</a></li>
-        <li><a title="Internet of Things" href="#">Internet of Things</a></li>
+        <li>Database Technologies</li>
+        <li>Cyber Security</li>
+        <li>iOS Development</li>
+        <li>PHP Application Development</li>
+        <li>Internet of Things</li>
         </ul>
         </div>
      </div>
