--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,20 +62,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     									<ul class="menu">
     										<li><a href="courses">Qualifications</a></li>
     										<li><a href="courses">Courses</a></li>
-    										<li><a href="#">Technologies</a></li>
+    										<%#<li><a href="#">Technologies</a></li>%>
     									</ul>
     								</div>
     							</div>
     						</div>
     						<div class="col-md-3 col-sm-6">
     							<div class="footerwidget">
-    								<h4>Information</h4>
+    								<%#<h4>Information</h4>
     								<div class="menu-course">
     									<ul class="menu">
     										<li>Centre Policies</li>
     										<li>Application Process</li>
     									</ul>
-    								</div>
+    								</div>%>
     							</div>
     						</div>
     						<div class="col-md-3 col-sm-6">
