course icon formatting

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,8 +4,10 @@
       <ul class="list-group courses">
         <li class="list-group-item">
           <a href="courses/web-design-and-development"> Level 3 Certificate in Web Design and Development (RQF) </a>
-					<%= image_tag("fulltime.png", :alt => "full time") %>
-					<%= image_tag("parttime.png", :alt => "part time") %>
+					<span style="white-space: nowrap;">
+            <%= image_tag("fulltime.png", :alt => "full time") %>
+					  <%= image_tag("parttime.png", :alt => "part time") %>
+          </span>
         </li>
       </ul>
     </div>
