--- a/app/views/courses/building_a_website.html.erb
+++ b/app/views/courses/building_a_website.html.erb
@@ -13,6 +13,66 @@
       <p>
         There are no pre-requisites to applying for the course but a sufficient level of English and Maths is required to participate.
       </p>
+      <h2>Weekly Content Guide</h2>
+      <p>
+        <table class='schedule'>
+          <tr>
+            <th>Week 1</th>
+            <td>
+              <ul>
+                <li>Introduction to web pages</li>
+                <li>HTML5</li>
+                <li>HTML5 APIs</li>
+                <li>Your first web site</li>
+                <li>Testing a web page</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th>Week 2</th>
+            <td>
+              <ul>
+                <li>Introduction to stylesheets</li>
+                <li>CSS3</li>
+                <li>CSS design and layout</li>
+                <li>Design frameworks (Bootstrap)</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th>Week 3</th>
+            <td>
+              <ul>
+                <li>HTML and CSS Fast and Right</li>
+                <li>Validation</li>
+                <li>Using templates</li>
+                <li>Good practices</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th>Week 4</th>
+            <td>
+              <ul>
+                <li>Web site platforms and frameworks</li>
+                <li>Introduction to Wordpress</li>
+                <li>Introduction to Squarespace</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th>Week 5</th>
+            <td>
+              <ul>
+                <li>Managing a website project</li>
+                <li>Hosting a website</li>
+                <li>Deploying a website</li>
+                <li>Managing domain names</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </p>
     </div>
     <div class="col-md-4">
     </div>
