link to eventbrite

--- a/app/views/courses/building_a_website.html.erb
+++ b/app/views/courses/building_a_website.html.erb
@@ -12,6 +12,10 @@
       <h2>Application</h2>
       <p>
         There are no pre-requisites to applying for the course but a sufficient level of English and Maths is required to participate.
+        <br />
+        <strong>
+          <a href="https://www.eventbrite.co.uk/e/building-a-website-tickets-32056562040" >Current course available</a>
+        </strong>
       </p>
       <h2>Weekly Content Guide</h2>
       <p>
@@ -73,6 +77,7 @@
           </tr>
         </table>
       </p>
+
     </div>
     <div class="col-md-4">
     </div>
