images on about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,28 +1,38 @@
 <section class="news-box top-margin">
   	<div class="container">
   		<h2><span>About Alderhill Digital</span></h2>
-      <p>
-        Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
-        Opened in 2016 the centre quickly established itself and is now approved to deliver vocational qualifications by Innovate Awarding.
-        Vocational qualifications allow learners to aquire industry specific skills by providing hands-on training.
-        The digital skills sector is a growing one and Alderhill Digital aim to assist anyone to learn and improve.
-      </p>
+      <div class='col-md-12'>
+        <p>
+          Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
+          Opened in 2016 the centre quickly established itself and is now approved to deliver vocational qualifications by Innovate Awarding.
+          Vocational qualifications allow learners to aquire industry specific skills by providing hands-on training.
+          The digital skills sector is a growing one and Alderhill Digital aim to assist anyone to learn and improve.
+        </p>
+      </div>
+      <div class='col-md-12'>
+        <%= image_tag "training-room-pano-3.jpg" %>
+      </div>
 
     </div>
   </section>
   <section class="news-box top-margin">
     <div class="container">
       <h2>Why Alderhill Digital?</h2>
-      <p>
-        Alderhill Digital has close relationships with local companies in the digital sector.
-        This helps us to keep our courses relevant with content that includes up-to-date technologies and programming languages.
-        Our short course incorporate the most recent platforms and development frameworks.
-        We strive to stay ahead of the curve and help our learners to do the same.
-      </p>
-      <p>
-        Confidence and motivation are also highly important when pursuing a career in the digital sector.
-        We desire to build up our learners not just know what to do but help them to be better.
-      </p>
+      <div class='col-sm-6 col-xs-12'>
+        <p>
+          Alderhill Digital has close relationships with local companies in the digital sector.
+          This helps us to keep our courses relevant with content that includes up-to-date technologies and programming languages.
+          Our short courses incorporate the most recent platforms and development frameworks.
+          We strive to stay ahead of the curve and help our learners to do the same.
+        </p>
+        <p>
+          Confidence and motivation are also highly important when pursuing a career in the digital sector.
+          We desire to build up our learners not just know what to do but help them to be better.
+        </p>
+      </div>
+      <div class='col-sm-6 col-xs-12'>
+        <%= image_tag "training-4.jpg" %>
+      </div>
     </div>
   </section>
   <section class="news-box top-margin">
@@ -36,6 +46,8 @@
       <p>
         For more information on Innovate Awarding you can visit their website by
         <a href="http://www.innovateawarding.org">Clicking Here</a>.
+        <br />
+        <%= image_tag "innovate-awarding.png" %>
       </p>
     </div>
   </section>
