--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     						<div class="col-md-6 panel">
     							<div class="panel-body">
     								<p class="simplenav">
-    									<a href="index">Home</a> |
+    									<a href="/">Home</a> |
     									<a href="about">About</a> |
     									<a href="courses">Courses</a> |
     									<a href="contact">Contact</a>
