--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -139,3 +139,26 @@
      </div>
   </div>
 </section>
+
+<% content_for :footer do %>
+<script>
+	jQuery(function(){
+
+		jQuery('#camera_wrap_4').camera({
+							transPeriod: 500,
+							time: 3000,
+			height: '600',
+			loader: 'false',
+			pagination: true,
+			thumbnails: false,
+			hover: false,
+							playPause: false,
+							navigation: false,
+			opacityOnGrid: false,
+			imagePath: 'assets/'
+		});
+
+	});
+
+</script>
+<% end %>
