--- a/app/views/courses/building_a_website.html.erb
+++ b/app/views/courses/building_a_website.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Courses - Building a website
+<% end %>
 <div class="container">
   <a href="/courses"> << Back to courses </a>
   <div class="row">
