--- a/app/views/courses/getting_started_with_linux.html.erb
+++ b/app/views/courses/getting_started_with_linux.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Courses - Getting started with linux
+<% end %>
 <div class="container">
   <a href="/courses"> << Back to courses </a>
   <div class="row">
