--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Courses
+<% end %>
 <section class="news-box top-margin">
     <div class="container">
       <h2> Qualifications </h2>
