--- a/app/views/courses/web_design_and_development.html.erb
+++ b/app/views/courses/web_design_and_development.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Courses - Level 3 Web Design and Development (RQF)
+<% end %>
 <div class="container">
   <a href="/courses"> << Back to courses </a>
   <div class="row">
