--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Find out about us.
+<% end %>
 <section class="news-box top-margin">
   	<div class="container">
   		<h2><span>About Alderhill Digital</span></h2>
