--- a/app/views/home/process_contact.html.erb
+++ b/app/views/home/process_contact.html.erb
@@ -1,3 +1,6 @@
+<% content_for :meta_description do %>
+Thank you for sending us a message.
+<% end %>
 <div class='container'>
   <h3>Thank you for your message. We will get in contact as soon as possible.</h3>
 </div>
