--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="alderhill digital training">
+		<meta name="description" content="Alderhill Digital Training : <%= yield :meta_description %>">
 		<meta name="author" content="alderhilldigital">
 		<title>Alderhill Digital Training</title>
 		<link rel="favicon" href="/assets/favicon.png">
