--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == 'about' %>"><a href="/about">About</a></li>
 						<li class="<%= 'active' if params[:controller] == 'courses' %>"><a href="courses">Courses</a></li>
 						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == 'contact' %>"><a href="/contact">Contact</a></li>
+						<li><a href="/blog">Blog</a></li>
 					</ul>
 				</div>
 			</div>
