mailchimp subscription form

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,6 +12,12 @@ Courses
 					  <%= image_tag("parttime.png", :alt => "part time") %>
           </span>
         </li>
+        <li class="list-group-item">
+          <a href="courses/digital-marketing"> Level 2 Award in Principles of Digital Marketing Platforms (QCF) </a>
+          <span style="white-space: nowrap;">
+            <%= image_tag("parttime.png", :alt => "part time") %>
+          </span>
+        </li>
       </ul>
     </div>
   </section>
