--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,12 +81,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     						</div>
     						<div class="col-md-3 col-sm-6">
     							<div class="footerwidget">
-    								<h4></h4>
-    								<div class="menu-course">
-    									<ul class="menu">
+										<h4>Please subscribe to our newsletter</h4>
+										<!-- Begin MailChimp Signup Form -->
+										<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+										<style type="text/css">
+											#mc_embed_signup{background:transparent; clear:left;  width:300px;}
+											/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+											   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+										</style>
+										<div id="mc_embed_signup">
+										<form action="//alderhilldigital.us15.list-manage.com/subscribe/post?u=898428a21f397e44ccf9b91b0&amp;id=088dc4eb54" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+										    <div id="mc_embed_signup_scroll">
 
-    									</ul>
-    								</div>
+											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+										    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+										    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_898428a21f397e44ccf9b91b0_088dc4eb54" tabindex="-1" value=""></div>
+										    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+										    </div>
+										</form>
+										</div>
+
+										<!--End mc_embed_signup-->
     							</div>
     						</div>
     						<div class="col-md-3 col-sm-6">
