--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,38 +1,38 @@
 <% content_for :meta_description do %>
 Courses
 <% end %>
-<section class="news-box top-margin">
-    <div class="container">
-      <h2> Qualifications </h2>
-      <ul class="list-group courses">
-        <li class="list-group-item">
-          <a href="courses/web-design-and-development"> Level 3 Certificate in Web Design and Development (RQF) </a>
-					<span style="white-space: nowrap;">
-            <%= image_tag("fulltime.png", :alt => "full time") %>
-					  <%= image_tag("parttime.png", :alt => "part time") %>
-          </span>
-        </li>
-        <li class="list-group-item">
-          <a href="courses/digital-marketing"> Level 2 Award in Principles of Digital Marketing Platforms (QCF) </a>
-          <span style="white-space: nowrap;">
-            <%= image_tag("parttime.png", :alt => "part time") %>
-          </span>
-        </li>
-      </ul>
-    </div>
-  </section>
+<% if @qualifications.any? %>
+  <section class="news-box top-margin">
+      <div class="container">
+        <h2> Qualifications </h2>
+        <ul class="list-group courses">
+          <% @qualifications.each do |qualification| %>
+            <li class="list-group-item">
+              <%= link_to qualification.name, course_path(qualification) %></a>
+    					<span style="white-space: nowrap;">
+                <%= image_tag("fulltime.png", :alt => "full time") if qualification.full_time? %>
+    					  <%= image_tag("parttime.png", :alt => "part time") if qualification.part_time?  %>
+              </span>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </section>
+<% end %>
+<% if @courses.any? %>
   <section class="news-box top-margin">
     <div class="container">
       <h2> Courses </h2>
       <ul class="list-group courses">
-				<li class="list-group-item">
-          <a href="courses/building-a-website"> Building a website </a>
-					<%= image_tag("parttime.png", :alt => "part time") %>
-        </li>
-        <li class="list-group-item">
-          <a href="courses/getting-started-with-linux"> Getting Started with Linux </a>
-					<%= image_tag("parttime.png", :alt => "part time") %>
-        </li>
-      </ul>
+        <% @courses.each do |course| %>
+          <li class="list-group-item">
+            <%= link_to course.name, course_path(course) %></a>
+  					<span style="white-space: nowrap;">
+              <%= image_tag("fulltime.png", :alt => "full time") if course.full_time? %>
+  					  <%= image_tag("parttime.png", :alt => "part time") if course.part_time?  %>
+            </span>
+          </li>
+        <% end %>
     </div>
   </section>
+<% end %>
