--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<meta name="author" content="alderhilldigital">
 		<title>Alderhill Digital Training</title>
 		<link rel="favicon" href="/assets/favicon.png">
-		<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700">
 		<!--<link rel="stylesheet" href="/assets/bootstrap.min.css">-->
 
