https for google fonts in import

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require font-awesome
  *= require_self
  */
- 
+
 
  /*
  Author: WebThemez.com
@@ -22,8 +22,8 @@
  Note: Please do not remove the footer backlink (webthemez.com)--(if you want to remove contact: webthemez@gmail.com)
  Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/licenses/by/3.0/
  */
- @import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
- @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+ @import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
+ @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
  body {
  	font-family: 'Lato', sans-serif;
  	font-weight: normal;
