--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,7 +73,7 @@
  .form-control {
  	display: block;
  	width: 100%;
- 	height: 41px;
+ 	/*height: 41px;*/
  	padding: 6px 12px;
  	font-size: 14px;
  	line-height: 2.428571;
@@ -209,7 +209,7 @@
  	background: #04a0b7;
  }
  .btn:hover, .btn:active {
- 	color: #c0c0c0;
+ 	/*color: #c0c0c0;*/
  }
  ul, .list.custom-list ul {
  	margin: 0 0 11px;
@@ -836,8 +836,8 @@
  	background: #0086C0 !important;
  }
  .btn {
- 	background: #0086C0;
- 	color: #fff;
+ 	/*background: #0086C0;
+ 	color: #fff;*/
  }
  .footer2 a {
  	padding: 4px 8px;
