--- a/app/assets/stylesheets/bootstrap-theme.css
+++ b/app/assets/stylesheets/bootstrap-theme.css
@@ -11,13 +11,13 @@
 .navbar-inverse .navbar-nav > .open ul > a { color:rgba(255, 255, 255, .4); }
 
 .navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus { color: #fff; background:none ; }
 .navbar-inverse .navbar-nav > .open > a{ background:none; color:white; }
 
-.navbar-inverse .navbar-nav>li>a:hover, 
+.navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus,
-.navbar-inverse .navbar-nav>.open>a:hover, 
+.navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus { background:none; color:white; }
 
 .navbar-inverse .navbar-nav > .active > a { background:none; color:white; }
@@ -43,7 +43,7 @@
 
 .navbar-nav .btn { border:1px solid rgba(255, 255, 255, .2); margin-left:5px; margin-top:5px; padding-top:10px; padding-bottom:10px; }
 
-.navbar-nav a.btn:focus, 
+.navbar-nav a.btn:focus,
 .navbar-nav a.btn:hover  { border:1px solid rgba(255,255,255,.6); }
 
 .navbar-collapse { border:0 none;  border-top:0 none; box-shadow: none; }
@@ -62,19 +62,20 @@
 /*******************************/
 /*          Buttons            */
 /*******************************/
-.btn-default, .btn-primary, .btn-success, .btn-action
+/*.btn-default, .btn-primary, .btn-success, .btn-action
 .btn-info,    .btn-warning, .btn-danger {
 	text-shadow: 0 2px 1px rgba(0, 0, 0, .2);
 }
 
 .btn { padding: 10px 40px; font-weight: bold; border:0 none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+
 .btn-lg { padding: 15px 65px; font-size: 14px; font-weight:bold; }
 .btn-default { text-shadow: none; background:transparent; color:rgba(50,50,50,.5); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); -moz-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.5); }
 	.btn-default:hover,
 	.btn-default:focus { color:rgba(50,50,50,.8); -webkit-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); -moz-box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); box-shadow:inset 0px 0px 0px 3px rgba(50,50,50,.8); background: transparent; }
 	.btn-default:active,
 	.btn-default.active { color:#333; -webkit-box-shadow:inset 0px 0px 0px 3px #333; -moz-box-shadow:inset 0px 0px 0px 3px #333; box-shadow:inset 0px 0px 0px 3px #333; background: transparent; }
-	
+*/
 .btn-action,
 .btn-primary { color:#FFEFD7; background-image: -webkit-linear-gradient(top, #FF9B22 0%, #FF8C00 100%); background-image: linear-gradient(to bottom, #FF9B22 0%, #FF8C00 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffFF9B22', endColorstr='#ffFF8C00', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); background-repeat: repeat-x; border:0 none; }
 	.btn-action:hover,
@@ -88,7 +89,7 @@
 .jumbotron { color: inherit; background-color: #F7F5F4; padding-top:30px; padding-bottom:30px; margin-bottom:0; }
 .container .jumbotron { -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; padding-left:40px; padding-right:40px; }
 	.jumbotron p { font-size:inherit; }
-	.jumbotron h2, .jumbotron h3, .jumbotron h4, 
+	.jumbotron h2, .jumbotron h3, .jumbotron h4,
 	.jumbotron h5, .jumbotron h6 { line-height: 1.3em; }
 
 
