--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,6 +15,28 @@
 		</div>
 	</div>
 </header>
+<div class='tech_icons'>
+	<div class="row">
+		<div class="col-xs-2">
+			<i class="fa fa-html5 fa-3x"></i>
+		</div>
+		<div class="col-xs-2">
+			<i class="fa fa-css3 fa-3x"></i>
+		</div>
+		<div class="col-xs-2">
+			<i class="fa fa-github fa-3x"></i>
+		</div>
+		<div class="col-xs-2">
+			<i class="fa fa-linux fa-3x"></i>
+		</div>
+		<div class="col-xs-2">
+			<i class="fa fa-wordpress fa-3x"></i>
+		</div>
+		<div class="col-xs-2">
+			<i class="fa fa-apple fa-3x"></i>
+		</div>
+	</div>
+</div>
 <div class="container">
   <div class="row">
 		<div class="col-md-3">
@@ -147,7 +169,7 @@
 		jQuery('#camera_wrap_4').camera({
 							transPeriod: 500,
 							time: 3000,
-			height: '600',
+			height: '500',
 			loader: 'false',
 			pagination: true,
 			thumbnails: false,
