absolute footer links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,9 +137,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     							<div class="panel-body">
     								<p class="simplenav">
     									<a href="/">Home</a> |
-    									<a href="about">About</a> |
-    									<a href="courses">Courses</a> |
-    									<a href="contact">Contact</a>
+    									<a href="/about">About</a> |
+    									<a href="/courses">Courses</a> |
+    									<a href="/contact">Contact</a>
     								</p>
     							</div>
     						</div>
