--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,5 +1,8 @@
+<% content_for :meta_title do %>
+ : Send us a message
+<% end %>
 <% content_for :meta_description do %>
-Send us a message.
+   - Please send us a message. We want to hear your feedback and answer any questions you might have.
 <% end %>
 <div class='container'>
 
