--- a/app/views/home/process_contact.html.erb
+++ b/app/views/home/process_contact.html.erb
@@ -1,5 +1,8 @@
+<% content_for :meta_title do %>
+ : Thank you for sending us a message.
+<% end %>
 <% content_for :meta_description do %>
-Thank you for sending us a message.
+  Thank you for your message. We will get in contact as soon as possible.
 <% end %>
 <div class='container'>
   <h3>Thank you for your message. We will get in contact as soon as possible.</h3>
