--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Alderhill Digital Training : <%= yield :meta_description %>">
 		<meta name="author" content="alderhilldigital">
-		<title>Alderhill Digital Training</title>
+		<title>Alderhill Digital Training<%= yield :meta_title %></title>
 		<link rel="favicon" href="/assets/favicon.png">
 		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 		<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700">
