courses meta data bug fix

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <% content_for :meta_description do %>
  - Qualifications and courses we offer.
-  <% @qualifications.collect{|qual| qual.name}.join(", ") + ' ' + @courses.collect{|qual| qual.name}.join(", ")
+  <% @qualifications.collect{|qual| qual.name}.join(", ") + ' ' + @courses.collect{|qual| qual.name}.join(", ") %>
 <% end %>
 <% if @qualifications.any? %>
   <section class="news-box top-margin">
