meta data update

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,7 +2,7 @@
  : Find out about us.
 <% end %>
 <% content_for :meta_description do %>
-   - Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
+ : Alderhill Digital is a training centre for digital technologies with a keen focus on programming and development.
 <% end %>
 <section class="news-box top-margin">
 	<div class="container">
