--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,7 +2,7 @@
  : Send us a message
 <% end %>
 <% content_for :meta_description do %>
-   - Please send us a message. We want to hear your feedback and answer any questions you might have.
+ : Please send us a message. We want to hear your feedback and answer any questions you might have.
 <% end %>
 <div class='container'>
 
