--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
  : Courses
 <% end %>
 <% content_for :meta_description do %>
- - Qualifications and courses we offer.
+ : Qualifications and courses we offer.
   <% @qualifications.collect{|qual| qual.name}.join(", ") + ' ' + @courses.collect{|qual| qual.name}.join(", ") %>
 <% end %>
 <% if @qualifications.any? %>
