--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,7 +2,7 @@
  : Courses - <%= @course.name %>
 <% end %>
 <% content_for :meta_description do %>
-  <%= @course.name + ' - ' + @course.description %>
+ : <%= @course.name + ' - ' + @course.description %>
 <% end %>
 <div class="container">
   <a href="/courses"> << Back to courses </a>
