--- a/app/views/admin/courses/edit.html.erb
+++ b/app/views/admin/courses/edit.html.erb
@@ -2,4 +2,6 @@
   <%= simple_form_for @course, :url => admin_course_path(@course) do |f| %>
     <%= render :partial => 'form', :locals => {:f => f} %>
   <% end %>
+
+  <h4><%= link_to "See Dates", admin_course_course_dates_path(@course) %></h4>
 </div>
