--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<%= csrf_meta_tag %>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Alderhill Digital Training<%= yield :meta_description %>">
@@ -39,10 +40,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav pull-right mainNav">
-						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == 'index' %>"><a href="/">Home</a></li>
-						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == 'about' %>"><a href="/about">About</a></li>
-						<li class="<%= 'active' if params[:controller] == 'courses' %>"><a href="courses">Courses</a></li>
-						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == 'contact' %>"><a href="/contact">Contact</a></li>
+						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == '/index' %>"><a href="/">Home</a></li>
+						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == '/about' %>"><a href="/about">About</a></li>
+						<li class="<%= 'active' if params[:controller] == 'courses' %>"><a href="/courses">Courses</a></li>
+						<li class="<%= 'active' if params[:controller] == 'home' and params[:action] == '/contact' %>"><a href="/contact">Contact</a></li>
 						<li><a href="/blog">Blog</a></li>
 					</ul>
 				</div>
@@ -165,6 +166,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     	  <%= javascript_include_tag 'camera.min' %>
     	  <%= javascript_include_tag 'bootstrap.min' %>
     		<%= javascript_include_tag 'custom' %>
+				<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 				<script>
 				  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
